# holly-db

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
holly-cli/: Cargo.toml
holly-cli/src/: main.rs
holly-cli/src/commands/: artifact.rs  audit.rs  connect.rs  context.rs  delete.rs  edit.rs  event.rs  get.rs  import.rs  init.rs  list.rs  mcp.rs  mod.rs  record.rs  reindex.rs  remember.rs  run.rs  search.rs  stats.rs  tag.rs  task.rs  update_check.rs
holly-core/: Cargo.toml
holly-core/src/: audit.rs  config.rs  context.rs  db.rs  edges.rs  embeddings.rs  error.rs  events.rs  import.rs  lib.rs  nodes.rs  provenance.rs  schema.rs  search.rs  stats.rs  types.rs
holly-mcp/: Cargo.toml
holly-mcp/src/: content_parser.rs  formatting.rs  lib.rs  server.rs
holly-mcp/src/tools/: edges.rs  events.rs  maintenance.rs  mod.rs  nodes.rs  search.rs  tasks.rs
