[package]
name = "holly"
version = "0.1.0"
edition = "2021"
description = "holly-db CLI — portable knowledge graph for developers"
license = "MIT"

[[bin]]
name = "holly"
path = "src/main.rs"

[dependencies]
holly-core = { path = "../holly-core" }
clap = { version = "4", features = ["derive", "env"] }
serde_json = "1"
anyhow = "1"
dirs = "5"
