[package]
name = "holly"
version = "0.1.1"
edition = "2021"
description = "holly-db CLI — portable knowledge graph for developers"
license = "MIT"

[[bin]]
name = "holly"
path = "src/main.rs"

[dependencies]
holly-core = { path = "../holly-core" }
holly-mcp = { path = "../holly-mcp" }
clap = { version = "4", features = ["derive", "env"] }
serde_json = "1"
anyhow = "1"
dirs = "5"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }
ureq = { version = "2", features = ["json"] }
