[package]
name = "holly-core"
version = "0.1.1"
edition = "2021"
description = "Core library for holly-db knowledge graph"
license = "MIT"

[dependencies]
rusqlite = { version = "0.38", features = ["bundled"] }
sqlite-vec = "0.1"
zerocopy = "0.7"
candle-core = "0.9"
candle-nn = "0.9"
candle-transformers = "0.9"
tokenizers = "0.21"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
dirs = "5"
sha2 = "0.10"
once_cell = "1"
hf-hub = { version = "0.3", features = ["tokio"] }
tokio = { version = "1", features = ["rt", "rt-multi-thread"] }

[dev-dependencies]
tempfile = "3"
