[package]
name = "holly-mcp"
version = "0.1.0"
edition = "2021"
description = "MCP server adapter for holly-db"
license = "MIT"

[lib]
name = "holly_mcp"
path = "src/lib.rs"

[dependencies]
holly-core = { path = "../holly-core" }
rmcp = { version = "0.1", features = ["server", "transport-io", "macros"] }
schemars = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }
thiserror = "2"
anyhow = "1"

[dev-dependencies]
